css/chat.css
* {
    margin: 0;
    padding: 0;
}

h1 {
    text-align: center;
    margin: 12px;
    font-size: 30px;

    font-family: sans-serif;
}

h2 {
    text-align: center;
    margin: 12px;
    font-size: 50px;

    font-family: sans-serif;
}

h3 {
    text-align: center;
    margin: 0px;
    font-size: 25px;

    font-family: sans-serif;
}

.container {
    width: 100vw;
    height: 100vh;
}

.container .chat-box-container {
        
    height: 40px; 
    position: fixed; 
    bottom:0px;
    width:100%; 
    background-color: #393838; 
    opacity: 1;

    background-color: #393838;

    
}

.chat-input {
    display: inline;
    margin: 0;

    min-width: 50px;
    max-width: 2080px;
    width: 80%;
    height: 40px;
    font-size: 25px;

    border-width: 5px;
}

.chat-button {
    display: inline;
    margin: 0;

    width: 10%;
    height: 40px;
    font-size: 25px;

    border-width: 5px;

}

